Update README and implement recursive functions in loop.js; remove unused HTML elements

--- a/index.html
+++ b/index.html
@@ -12,42 +12,6 @@
   <body>
     <h1>Javascript</h1>
 
-    <h2>Chẵn Lẻ</h2>
-    <input type="number" id="number" />
-    <p id="kq">kq</p>
-    <!-- <p>Lẻ</p> -->
-    <button onclick="checkNumber()">Kiểm tra</button>
-
-    <h2>So Sánh 2 Số</h2>
-    <input type="number" id="number1" placeholder="a" />
-    <input type="number" id="number2" placeholder="b" />
-    <!-- Bằng nhau | Khác nhau -->
-    <p id="kq2">kq</p>
-    <button onclick="compareNumber()">So sánh</button>
-
-    <h2>Địa điểm</h2>
-    <select id="location" onchange="handleChangeLocation()">
-      <option value="">Chọn địa điểm</option>
-      <option value="dn">Đà Nẵng</option>
-      <option value="hue">Huế</option>
-      <option value="qn">Quảng Nam</option>
-    </select>
-
-    <p>Bạn Đang Chọn Địa Điểm: <span id="text-location"></span></p>
-
-    <h2>Học lực</h2>
-    <input placeholder="toan" id="toan" type="number" />
-    <p id="error-toan"></p>
-
-    <input placeholder="ly" id="ly" type="number" />
-    <p id="error-ly"></p>
-
-    <input placeholder="hoa" id="hoa" type="number" />
-    <p id="error-hoa"></p>
-
-    <button onclick="handleXetHocLuc()">Xét học lực</button>
-    <p>Học lực: <span id="hoc-luc"></span></p>
-
     <!-- Đặt code js trong thẻ script -->
     <script>
       console.log("hello");
@@ -59,7 +23,7 @@
     <!-- <script src="./js-2.js"></script> -->
     <!-- <script src="./js-3.js"></script> -->
 
-    <script src="./js-4.js"></script>
+    <!-- <script src="./js-4.js"></script> -->
 
     <script src="./loop.js" ></script>
   </body>
