feat: loop buoi 2

--- a/index.html
+++ b/index.html
@@ -12,6 +12,36 @@
   <body>
     <h1>Javascript</h1>
 
+    <div id="co-vua">
+      <div class="row">
+        <div class="box box--black"></div>
+
+        <div class="box box--white"></div>
+        <div class="box box--black"></div>
+      </div>
+
+      <div class="row">
+        <div class="box box--white"></div>
+
+        <div class="box box--black"></div>
+
+        <div class="box box--white"></div>
+
+      </div>
+
+      <div class="row">
+        <div class="box box--black"></div>
+
+        <div class="box box--white"></div>
+        <div class="box box--black"></div>
+
+      </div>
+    </div>
+
+    <div id="content">
+
+    </div>
+
     <!-- Đặt code js trong thẻ script -->
     <script>
       console.log("hello");
@@ -25,6 +55,6 @@
 
     <!-- <script src="./js-4.js"></script> -->
 
-    <script src="./loop.js" ></script>
+    <script src="./loop.js"></script>
   </body>
 </html>
