feat: update README and implement todo list functionality with array manipulation

--- a/index.html
+++ b/index.html
@@ -11,36 +11,14 @@
   </head>
   <body>
     <h1>Javascript</h1>
+    <input type="text" id="input" name="todo" placeholder="todo" />
+    <button onclick="handleAddTodo()" id="btn">Add</button>
 
-    <div id="co-vua">
-      <div class="row">
-        <div class="box box--black"></div>
-
-        <div class="box box--white"></div>
-        <div class="box box--black"></div>
-      </div>
-
-      <div class="row">
-        <div class="box box--white"></div>
-
-        <div class="box box--black"></div>
-
-        <div class="box box--white"></div>
-
-      </div>
-
-      <div class="row">
-        <div class="box box--black"></div>
-
-        <div class="box box--white"></div>
-        <div class="box box--black"></div>
-
-      </div>
-    </div>
-
-    <div id="content">
-
-    </div>
+    <ul id="list">
+      <!-- <li>hoc bai</li>
+      <li>an</li>
+      <li>ngu</li> -->
+    </ul>
 
     <!-- Đặt code js trong thẻ script -->
     <script>
@@ -55,6 +33,7 @@
 
     <!-- <script src="./js-4.js"></script> -->
 
-    <script src="./loop.js"></script>
+    <!-- <script src="./loop.js"></script> -->
+    <script src="./array.js"></script>
   </body>
 </html>
