feat: update README with array usage details and add array manipulation examples in array-2.js

--- a/index.html
+++ b/index.html
@@ -34,6 +34,38 @@
     <!-- <script src="./js-4.js"></script> -->
 
     <!-- <script src="./loop.js"></script> -->
-    <script src="./array.js"></script>
+    <!-- <script src="./array.js"></script> -->
+
+
+    <!-- <script>
+      const handleClick = function(){
+        
+      }
+
+      handleClick();
+
+      let age = 20;
+      let fullName = "Nguyen Van A";
+      let n = null;
+      let u = undefined;
+
+
+      let sv1= "Bao";
+      let sv2 = "Huy";
+      let sv3 = "Truong";
+
+      // let lopHoc = sv1 + " " + sv2 + " " + sv3;
+
+      // Khởi tạo giá trị có kiểu dữ liệu là array;
+      // Khai báo biến lớp học có kiểu dữ liệu là array, giá trị của array là rỗng.
+      let lopHoc = [];
+      // Thêm phần tử vào mảng
+      lopHoc.push(sv1);
+      lopHoc.push(sv2);
+      lopHoc.push(sv3);
+    </script> -->
+
+    <script src="./array-2.js"></script>
   </body>
 </html>
+
