feat: update README and array-2.js with array methods and improve code formatting; enhance index.html structure for better organization

--- a/index.html
+++ b/index.html
@@ -14,10 +14,24 @@
     <input type="text" id="input" name="todo" placeholder="todo" />
     <button onclick="handleAddTodo()" id="btn">Add</button>
 
+    <h2>Todo</h2>
     <ul id="list">
       <!-- <li>hoc bai</li>
       <li>an</li>
       <li>ngu</li> -->
+      <!-- <li>
+        js
+        <button>v</button>
+      </li>
+      <li>
+        react
+
+        <button>v</button>
+      </li> -->
+    </ul>
+
+    <h2>Done</h2>
+    <ul id="done">
     </ul>
 
     <!-- Đặt code js trong thẻ script -->
@@ -35,7 +49,6 @@
 
     <!-- <script src="./loop.js"></script> -->
     <!-- <script src="./array.js"></script> -->
-
 
     <!-- <script>
       const handleClick = function(){
@@ -68,4 +81,3 @@
     <script src="./array-2.js"></script>
   </body>
 </html>
-
